force-app/main/default/objects/Contact/fields/Compa_ia__c.field-meta.xml
<CustomField>
    <fullName>Compa_ia__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compañia</label>
    <type>Text</type>
</CustomField>