force-app/main/default/objects/Contact/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <label>Empresa</label>
    <type>TextArea</type>
</CustomField>