force-app/main/default/objects/Contact/fields/Fecha_proximo_cumpleanos__c.field-meta.xml
<CustomField>
    <fullName>Fecha_proximo_cumpleanos__c</fullName>
    <formula>IF(TODAY()&gt;DATE(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate)),DATE(YEAR(TODAY())+1,MONTH(Birthdate),DAY(Birthdate)),DATE(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha próximo cumpleaños</label>
    <type>Date</type>
</CustomField>