force-app/main/default/objects/Contact/fields/FS_KAM__c.field-meta.xml
<CustomField>
    <fullName>FS_KAM__c</fullName>
    <label>KAM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>