force-app/main/default/objects/Contact/fields/FS_PMCore__c.field-meta.xml
<CustomField>
    <fullName>FS_PMCore__c</fullName>
    <label>PM Core</label>
    <length>100</length>
    <type>Text</type>
</CustomField>