force-app/main/default/objects/Contact/fields/FS_PMOmnia__c.field-meta.xml
<CustomField>
    <fullName>FS_PMOmnia__c</fullName>
    <label>PM Omnia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>