force-app/main/default/objects/Contact/fields/FS_PMPSPrincipal__c.field-meta.xml
<CustomField>
    <fullName>FS_PMPSPrincipal__c</fullName>
    <label>PM-PS Principal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>