force-app/main/default/objects/Contact/fields/FS_PMPSSecundario__c.field-meta.xml
<CustomField>
    <fullName>FS_PMPSSecundario__c</fullName>
    <label>PM-PS Secundario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>