force-app/main/default/objects/Contact/fields/FS_Producto_2__c.field-meta.xml
<CustomField>
    <fullName>FS_Producto_2__c</fullName>
    <label>Producto 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>