force-app/main/default/objects/Contact/fields/FS_Tipo_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>FS_Tipo_de_Contacto__c</fullName>
    <label>Tipo de Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tomador de Decisión</fullName>
            </value>
            <value>
                <fullName>Gestor</fullName>
            </value>
            <value>
                <fullName>Tomador de Decisión / Gestor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>