force-app/main/default/objects/Contact/fields/Pa_s__c.field-meta.xml
<CustomField>
    <fullName>Pa_s__c</fullName>
    <formula>Text(Account.Pa_s__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>País</label>
    <type>Text</type>
</CustomField>