force-app/main/default/objects/Contact/fields/Perfil_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>Perfil_LinkedIn__c</fullName>
    <inlineHelpText>Introducir el URL del perfil de esta persona</inlineHelpText>
    <label>Perfil LinkedIn</label>
    <type>Url</type>
</CustomField>