force-app/main/default/objects/Contact/fields/Saludo__c.field-meta.xml
<CustomField>
    <fullName>Saludo__c</fullName>
    <label>Saludo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estimado</fullName>
            </value>
            <value>
                <fullName>Estimada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>