force-app/main/default/objects/Contact/recordTypes/Prospectos.recordType-meta.xml
<RecordType>
    <fullName>Prospectos</fullName>
    <active>true</active>
    <label>Prospectos</label>
</RecordType>