force-app/main/default/objects/Contact/listViews/Contactos_Outbound_Esta_semana.listView-meta.xml
<ListView>
    <fullName>Contactos_Outbound_Esta_semana</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Compa_ia__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>10/1/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>CONTACT.LEAD_SOURCE</field>
        <operation>notEqual</operation>
        <value>Partner,Directo/ Interno,Directo/ Invitación,Directo/ Evento,Otros / Others,Web,Referencia Cliente,Referencia del empleado,Inbound,Outbound</value>
    </filters>
    <label>Contactos Outbound - Esta semana (28/08)</label>
</ListView>