force-app/main/default/objects/Contact/listViews/Listado_de_clientes.listView-meta.xml
<ListView>
    <fullName>Listado_de_clientes</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Clientes</value>
    </filters>
    <label>Listado de clientes</label>
</ListView>