force-app/main/default/objects/Contact/listViews/Org_Contact_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Contact_Hierarchy</fullName>
    <columns>Account.Name_of_BPM_or_workflow_system__c</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Contact_Hierarchy</label>
</ListView>