force-app/main/default/objects/Contact/listViews/Todosloscontactos.listView-meta.xml
<ListView>
    <fullName>Todosloscontactos</fullName>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <columns>Empresa__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Compa_ia__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los contactos</label>
</ListView>